--- a/assets/css/ecocleaner.css
+++ b/assets/css/ecocleaner.css
@@ -32,21 +32,7 @@ form.form_container {
   	padding: 16px;
 }
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-    -webkit-appearance: none; 
-    margin: 0; 
-	font-size: 20px;
-	border: none;
-    height: 40px;
-	width: 200px;
-	text-align: center;
-	background: #0088a0;
-	color: white;
-}
 input[type=number] { 
-  	-moz-appearance: textfield;
-  	appearance: textfield;
   	margin: 0; 
 	font-size: 20px;
 	border: none;
@@ -59,12 +45,15 @@ input[type=number] {
 
 input[type=number]::-webkit-input-placeholder {
     font-weight: 600;
+	color: white;
 }
 input[type=number]::-moz-placeholder {
     font-weight: 600;
+	color: white;
 }
 input[type=number]::-ms-input-placeholder {
     font-weight: 600;
+	color: white;
 }
 
 
@@ -80,7 +69,7 @@ input[type=number]::-ms-input-placeholder {
     background: #0088a0;
 	height: 40px;
 	width: 200px;
-	color: #015155;
+	color: #ffffff;
 
 }
 
@@ -92,7 +81,7 @@ input[type=number]::-ms-input-placeholder {
 		
 }
 	
-	input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
 	width: 80%;
 
