--- a/assets/css/ecocleaner.css
+++ b/assets/css/ecocleaner.css
@@ -1,4 +1,4 @@
-form.form_container {
+#ecocleaner_form {
     margin: 10px auto;
     width: 100%;
     display: flex;
@@ -9,7 +9,7 @@ form.form_container {
 	font-family: "Montserrat"
 
 }
-.form-row {
+#ecocleaner_form.form-row {
 	border-bottom: 2px solid #015155;
 	padding: 5px;
 	display: flex;
@@ -18,21 +18,23 @@ form.form_container {
 }
 
 
-.send {
+#ecocleaner_form.send {
 	border: none;
 	font-size: 20px;
 	color: #015155;
+	padding-top: 10px;
+	align-items: center;
 
 }
 
-.form-row div {
+#ecocleaner_form.form-row div {
     color: #015155;
     font-family: 'Montserrat';
     font-size: 20px;
   	padding: 16px;
 }
 
-input[type=number] { 
+#ecocleaner_form input[type=number] { 
   	margin: 0; 
 	font-size: 20px;
 	border: none;
@@ -43,26 +45,20 @@ input[type=number] {
 	color: white;
 }
 
-input[type=number]::-webkit-input-placeholder {
+#ecocleaner_form input[type=number]::-webkit-input-placeholder {
     font-weight: 600;
 	color: white;
 }
-input[type=number]::-moz-placeholder {
+#ecocleaner_form input[type=number]::-moz-placeholder {
     font-weight: 600;
 	color: white;
 }
-input[type=number]::-ms-input-placeholder {
+#ecocleaner_form input[type=number]::-ms-input-placeholder {
     font-weight: 600;
 	color: white;
 }
 
-
-.send {
-	padding-top: 10px;
-	align-items: center;
-}
-
-.razem-cena {
+#ecocleaner_form.razem-cena {
     font-size: 20px;
     font-family: "Montserrat";
     border: none;
@@ -73,20 +69,19 @@ input[type=number]::-ms-input-placeholder {
 
 }
 
-
 @media screen and (max-width: 600px){
-	.form-row {
+	#ecocleaner_form.form-row {
 		display: flex;
 		flex-direction: column;	
 		
 }
 	
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
+#ecocleaner_form input[type=number]::-webkit-inner-spin-button, 
+#ecocleaner_form input[type=number]::-webkit-outer-spin-button { 
 	width: 80%;
 
 }
-input[type=number] { 
+#ecocleaner_form input[type=number] { 
 	width: 80%;
 }
 }
