--- a/assets/css/ecocleaner.css
+++ b/assets/css/ecocleaner.css
@@ -3,8 +3,6 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-	/* align-items: center;
-    justify-content: center;*/
 	color: white;
 	font-family: "Montserrat"
 
@@ -68,20 +66,24 @@
 	color: #ffffff;
 
 }
+#ecocleaner_form .razem {
+	font-weight: 700;
+}
 
-@media screen and (max-width: 600px){
-	#ecocleaner_form.form-row {
-		display: flex;
-		flex-direction: column;	
+@media (max-width: 630px){
+ #ecocleaner_form .form-row {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	 font-size: 17px;
 		
 }
 	
-#ecocleaner_form input[type=number]::-webkit-inner-spin-button, 
-#ecocleaner_form input[type=number]::-webkit-outer-spin-button { 
-	width: 80%;
-
-}
 #ecocleaner_form input[type=number] { 
-	width: 80%;
+	margin-bottom: 4%;
 }
+	button.razem-cena {
+		margin-top: 3%;
+	}
 }
